--- a/EKLM-Backend/application.properties
+++ b/EKLM-Backend/application.properties
@@ -1,12 +1,5 @@
-#DbManager.name=kanders
-#DbManager.host=127.0.0.1
-#DbManager.port=3306
-#DbManager.username=root
-#DbManager.password=
-
-
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://localhost:3306/kanders2
+spring.datasource.url=jdbc:mariadb://localhost:3306/eklmdb
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
